# EEG-Imagined-speech-recognition

./: .gitignore  CITATION.cff  LICENSE  README.md  config-template.toml  config-template.yaml  pyproject.toml  requirements.txt
docs/: INSTALLATION.md  README.md  SUMMARY.md  USAGE.md
docs/usage/: configuration-file.md  configure-model.md  run-workflows.md
docs/utils/: ifs.md  models.md
src/eeg_isr/: __init__.py  classifier.py  config.py  dataset.py  features.py  feis.py  ifs.py  info.py  karaone.py  models.py  sacred-runner.py  sampler.py  tfr.py
tests/: test_ifs.py
utils/: classifier.py  config.py  dataset.py  features.py  feis.py  ifs.py  info.py  karaone.py  models.py  sacred-runner.py  sampler.py  svm.py  tfr.py  tfr_dataset.py
workflows/: classification-tf-1.py  download-karaone.py  eeg-acoustic-correlation.py  features-feis.py  features-karaone.py  flatten-classifier-KBest.py  flatten-classifier.py  ifs-classifier.py  ifs-feis.py  ifs-karaone.py  svm-feis.py  svm-karaone.py  tfr-classifier.py  tfr_dataset-create.py  tfr_ds-karaone.py
