[project]
name = "eeg-imagined-speech-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antropy>=0.1.9",
    "dask[complete]>=2025.5.1",
    "graphviz>=0.21",
    "imbalanced-learn>=0.12.4",
    "mne>=1.9.0",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "pydot>=4.0.1",
    "rich>=14.0.0",
    "sacred>=0.8.7",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "tensorflow>=2.19.0",
    "tftb>=0.1.4",
]
